PR/50711: David Binderman: Fix memory leak on error